# chiral-db-grpc

./: Cargo.toml  ChiralDB.toml  Dockerfile  README.md  build.rs
.github/workflows/: docker.yml  main.yml
ci/: Dockerfile  Dockerfile-musl  chembl_28_chemreps_99.txt  run.sh
proto/: chiral_db.proto
src/: client.rs  data.rs  server.rs
